Fixed minimized not showing the no aircraft message Fixed minHeight on scrolling so it would not jump

--- a/css/map.css
+++ b/css/map.css
@@ -1345,6 +1345,7 @@ margin-top: 7px;
     font-weight: 500;
     font-family: "Heebo-Regular";
     text-align: center;
+    margin-top: 6px;
 }
 
 #noAircraftMessageRow {
